--- a/laxa2/laxa2.ipynb
+++ b/laxa2/laxa2.ipynb
@@ -30,29 +30,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-ebbb525c1f9f>, line 5)",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-11-ebbb525c1f9f>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    elif:\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Talet är 0\n"
     }
    ],
    "source": [
     "tal = int(input(\"Ange ett heltal\"))\n",
     "\n",
-    "if tal%2 == 0: \n",
-    "    print(\"Talet är jämnt\")\n",
-    "elif: \n",
-    "    print(\"Talet är udda\")\n",
-    "else tal%5 == 0:\n",
+    "if tal >0:\n",
+    "    print(\"Talet är positivt\")\n",
+    "elif tal == 0:\n",
     "    print(\"Talet är 0\")\n",
+    "else:\n",
+    "    print(\"Talet är negativt\")\n",
     "\n"
    ]
   },
