--- a/Räkna_med_python/for_satser1.ipynb
+++ b/Räkna_med_python/for_satser1.ipynb
@@ -14,8 +14,13 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600859765531",
-   "display_name": "Python 3.8.3 64-bit ('base': conda)"
+   "name": "Python 3.8.3 64-bit ('base': conda)",
+   "display_name": "Python 3.8.3 64-bit ('base': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "0652361c9652ca9d11df440027a39321fdbde148116c3f53c3b0762d242e77c2"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -216,7 +221,7 @@
   },
   {
    "source": [
-    "# For satser 2."
+    "# For satser 3."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -245,10 +250,32 @@
   },
   {
    "source": [
-    "# For satser 3."
+    "# For satser 4."
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1+2+3+...+98+99 = 2500\n"
+    }
+   ],
+   "source": [
+    "s = 0\n",
+    "\n",
+    "for i in range(1,101,2):\n",
+    "    s+= i\n",
+    "\n",
+    "print(f\"1+2+3+...+98+99 = {s}\")"
+   ]
   },
   {
    "cell_type": "code",
