--- a/Räkna_med_python/while1.ipynb
+++ b/Räkna_med_python/while1.ipynb
@@ -98,10 +98,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1+3+5+7+9 = 20\n"
+    }
+   ],
+   "source": [
+    "n = 0 #Räknarvariabel\n",
+    "'''\n",
+    "while n < 10: \n",
+    "    print(n, end = \" \")\n",
+    "    n += 1\n",
+    "'''\n",
+    "summa = 0 \n",
+    "while n < 10: \n",
+    "    summa = summa + n\n",
+    "    n+= 2\n",
+    "\n",
+    "print(f\"1+3+5+7+9 = {summa}\")\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "''' \n",
+    "1L mjölk 1500000 bakterier\n",
+    "I rumstemperatur ökar antalet bakterier med 50% varje timme.\n",
+    "Mjölk blir sur när bakterierna överstiger 100000000 st.\n",
+    "Hur många timmar tills mjölken blir sur?\n",
+    "..."
+   ]
   }
  ]
 }
