--- a/Räkna_med_python/while_satser1.ipynb
+++ b/Räkna_med_python/while_satser1.ipynb
@@ -101,7 +101,11 @@
    "source": [
     "import random as rnd \n",
     "\n",
-    "# hej"
+    "n = rnd.randint(0,101)\n",
+    "s = float(input(\"Ange slumpmässig tal mellan 1 och 100\"))\n",
+    "\n",
+    "while s != n:\n",
+    "    if n > s"
    ]
   }
  ]
