--- a/Räkna_med_python/while1.ipynb
+++ b/Räkna_med_python/while1.ipynb
@@ -127,18 +127,79 @@
    ]
   },
   {
+   "source": [
+    "# Mjölkuppgift - while\n",
+    "\n",
+    "1L mjölk 1 500 000 bakterier\n",
+    "I rumstemperatur ökar antalet bakterier med 50% varje timme.\n",
+    "\n",
+    "Mjölk blir sur när bakterierna överstiger 10 000 000 st.\n",
+    "\n",
+    "Hur många timmar tills mjölken blir sur?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Det tar 5h i rumstemperatur för att mjölken ska surna\nx = [0 1 2 3 4 5]\ny = [1500000.0, 2250000.0, 3375000.0, 5062500.0, 7593750.0, 11390625.0]\n"
+    },
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "module &#39;matplotlib.pyplot&#39; has no attribute &#39;titel&#39;",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m&lt;ipython-input-20-95014d05f855&gt;\u001b[0m in \u001b[0;36m&lt;module&gt;\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m&quot;Timmar (h)&quot;\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m&quot;Antal bakterier&quot;\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---&gt; 25\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtitel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m&quot;Bakterietillväxt i mjölk i rumstemperatur&quot;\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module &#39;matplotlib.pyplot&#39; has no attribute &#39;titel&#39;"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt \n",
+    "import numpy as np\n",
+    "\n",
+    "bakterier = 1.5e6 # 1.5 x 10^6\n",
+    "surt = 1e7\n",
+    "faktor = 1.5\n",
+    "timmar = 0\n",
+    "\n",
+    "y_bakterier = [bakterier] #lista som ska hålla bakteriernas \"förändring\"\n",
+    "\n",
+    "while bakterier < surt:\n",
+    "    bakterier = faktor*bakterier\n",
+    "    y_bakterier.append(bakterier)\n",
+    "    timmar += 1\n",
+    "\n",
+    "x_timmar = np.arange(timmar+1)\n",
+    "\n",
+    "print(f\"Det tar {timmar}h i rumstemperatur för att mjölken ska surna\")\n",
+    "print(f\"x = {x_timmar}\")\n",
+    "print(f\"y = {y_bakterier}\")\n",
+    "\n",
+    "plt.plot(x_timmar, y_bakterier)\n",
+    "plt.xlabel(\"Timmar (h)\")\n",
+    "plt.ylabel(\"Antal bakterier\")\n",
+    "plt.titel(\"Bakterietillväxt i mjölk i rumstemperatur\")\n",
+    "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "''' \n",
-    "1L mjölk 1500000 bakterier\n",
-    "I rumstemperatur ökar antalet bakterier med 50% varje timme.\n",
-    "Mjölk blir sur när bakterierna överstiger 100000000 st.\n",
-    "Hur många timmar tills mjölken blir sur?\n",
-    "..."
-   ]
+   "source": []
   }
  ]
 }
