jobbade på uppgiften fra till e)

--- a/Räkna_med_python/Programmeringslaboration1.ipynb
+++ b/Räkna_med_python/Programmeringslaboration1.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.3 64-bit ('base': conda)",
-   "display_name": "Python 3.8.3 64-bit ('base': conda)",
+   "name": "Python 3.8.3 64-bit (conda)",
+   "display_name": "Python 3.8.3 64-bit (conda)",
    "metadata": {
     "interpreter": {
      "hash": "0652361c9652ca9d11df440027a39321fdbde148116c3f53c3b0762d242e77c2"
@@ -27,28 +27,140 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "# Uppgift 1 a)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.7633355762707958 0.5004427110801699\n"
+      "0.7071067811865476\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "x = 0.5\n",
+    "\n",
+    "y = 0.5\n",
+    "\n",
+    "print(math.sqrt(x**2+y**2)) # Använder pytagoras sats för att räkna ut distansen. "
+   ]
+  },
+  {
+   "source": [
+    "# Uppgift 1 b)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1.4142135623730951\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "x = 1\n",
+    "\n",
+    "y = 1\n",
+    "\n",
+    "print(math.sqrt(x**2+y**2)) #Använder pythagoras sats för att räkna ut distansen."
+   ]
+  },
+  {
+   "source": [
+    "# Uppgift 1 c)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.7071067811865476\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math \n",
+    "\n",
+    "x = 0.5\n",
+    "\n",
+    "y = -0.5\n",
+    "\n",
+    "print(math.sqrt(x**2+y**2)) # Gör samma sak som innan. Det är exakt samma distans som första efter som det är liknande fast på olika sidor"
+   ]
+  },
+  {
+   "source": [
+    "# Uppgift 1 d)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.01743870561664096 -0.781117863850779\n-0.4100148925487608 -0.2011010497600716\n-0.12458329365276488 -0.292114235227416\n0.8855045444561378 -0.9441782557965397\n-0.6183790600841883 -0.1429172727406689\n-0.510697693385548 -0.6098820923135171\n0.6405547156715008 -0.5713518924006586\n0.8868193946498646 0.9910800375154454\n0.9498656942854424 -0.3101533912607948\n0.6606876702985602 0.2074016786782098\n"
      ]
     }
    ],
    "source": [
     "import random as rnd\n",
     "\n",
-    "x = rnd.uniform(-1,1) #randomizar x koordinat mellan -1 och 1\n",
+    "for i in range(10):\n",
     "\n",
-    "y = rnd.uniform(-1,1) #randomizar y koordinat mellan -1 och 1\n",
+    "    x = rnd.uniform(-1,1) #randomizar x koordinat mellan -1 och 1\n",
     "\n",
-    "print(x,y) #printar randomizad x och y koordinat\n",
-    "\n"
+    "    y = rnd.uniform(-1,1) #randomizar y koordinat mellan -1 och 1\n",
+    "\n",
+    "    print(x,y) #printar randomizad x och y koordinat\n"
    ]
+  },
+  {
+   "source": [
+    "# Uppgift 1 e)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
