--- a/Räkna_med_python/Programmeringslaboration1.ipynb
+++ b/Räkna_med_python/Programmeringslaboration1.ipynb
@@ -249,8 +249,38 @@
     }
    ],
    "source": [
-    "for i in range(1,101):\n",
+    "for i in range(1,101): \n",
     "    print(i, end =\" \")"
+   ]
+  },
+  {
+   "source": [
+    "# Uppgift 2 b)\n",
+    "\n",
+    "\"För varje multipel av 5 ska programmet skriva ut ”Burr”\""
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1 2 3 4 burr\n6 7 8 9 burr\n11 12 13 14 burr\n16 17 18 19 burr\n21 22 23 24 burr\n26 27 28 29 burr\n31 32 33 34 burr\n36 37 38 39 burr\n41 42 43 44 burr\n46 47 48 49 burr\n51 52 53 54 burr\n56 57 58 59 burr\n61 62 63 64 burr\n66 67 68 69 burr\n71 72 73 74 burr\n76 77 78 79 burr\n81 82 83 84 burr\n86 87 88 89 burr\n91 92 93 94 burr\n96 97 98 99 burr\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,101):\n",
+    "    if i%5 == 0: \n",
+    "        print(\"burr\")\n",
+    "    else:\n",
+    "        print(i, end =\" \")\n"
    ]
   },
   {
@@ -258,10 +288,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for i in range(1,101):\n",
-    "    print(i, end =\" \")\n"
-   ]
+   "source": []
   }
  ]
 }
