--- a/Räkna_med_python/Programmeringslaboration1.ipynb
+++ b/Räkna_med_python/Programmeringslaboration1.ipynb
@@ -284,11 +284,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Uppgift 2 c)\n",
+    "\n",
+    "\"Låt användaren mata in ett tal vars multiplar blir ”Burr”\"\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
