--- a/Mer_Programmering/string_läxa.ipynb
+++ b/Mer_Programmering/string_läxa.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "source": [
-    "# 1.\n",
+    "# Uppgift 1.\n",
     "\n",
     "\"Skriv ett program där användaren kan mata in sitt namn och programmet räknar antalet bokstäver i namnet.\""
    ],
@@ -51,7 +51,7 @@
   },
   {
    "source": [
-    "# 2.\n",
+    "# Uppgift 2.\n",
     "\n",
     "\"Skriv ett program som räknar antalet ord i denna mening: En bild säger mer än tusen ord, en matematisk formel säger mer än tusen bilder.\""
    ],
@@ -81,9 +81,47 @@
    ]
   },
   {
-   "source": [],
+   "source": [
+    "# Uppgift 4."
+   ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-e8093a6f4f9b>, line 9)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-e8093a6f4f9b>\"\u001b[1;36m, line \u001b[1;32m9\u001b[0m\n\u001b[1;33m    if mening = vokaler\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "mening = \"Do not worry about your difficulties in Mathematics. I can assure you mine are still greater.\"\n",
+    "\n",
+    "mening = mening.lower()\n",
+    "\n",
+    "antal_vokaler = 0\n",
+    "\n",
+    "vokaler = [\"a\", \"i\", \"o\", \"u\", \"e\"]\n",
+    "\n",
+    "if mening = vokaler\n",
+    "    antal_vokaler += 1\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
