--- a/Mer_Programmering/string_läxa.ipynb
+++ b/Mer_Programmering/string_läxa.ipynb
@@ -95,9 +95,9 @@
     {
      "output_type": "error",
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-e8093a6f4f9b>, line 9)",
+     "evalue": "cannot assign to operator (<ipython-input-2-3c606b445f86>, line 6)",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-e8093a6f4f9b>\"\u001b[1;36m, line \u001b[1;32m9\u001b[0m\n\u001b[1;33m    if mening = vokaler\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-3c606b445f86>\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    antal-vokaler = 0\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m cannot assign to operator\n"
      ]
     }
    ],
@@ -106,12 +106,13 @@
     "\n",
     "mening = mening.lower()\n",
     "\n",
-    "antal_vokaler = 0\n",
-    "\n",
     "vokaler = [\"a\", \"i\", \"o\", \"u\", \"e\"]\n",
+    "antal-vokaler = 0\n",
     "\n",
-    "if mening = vokaler\n",
-    "    antal_vokaler += 1\n",
+    "for vokal in vokaler:\n",
+    "    antal-vokaler += mening.count(vokal)\n",
+    "\n",
+    "print(f\"Den här meningen har {antal-vokaler} vokaler\")\n",
     "\n",
     "\n"
    ]
