--- a/Programmerijng_IRL/felhantering.ipynb
+++ b/Programmerijng_IRL/felhantering.ipynb
@@ -83,6 +83,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "största talet är 26.0, minsta talet är 23.0\n[23.0, 24.0, 25.0, 26.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# låt användaren mata in ett antal tal\n",
+    "# skriv ut största talet\n",
+    "# skriv ut minsta talet\n",
+    "\n",
+    "tal_str = input(\"skriv in ett antal tal med mellanrum emellan: \")\n",
+    "lista_str = tal_str.split() # split ger oss en lista, splittar där vi har mellanslag\n",
+    "\n",
+    "try:\n",
+    "    # lista av flyttal\n",
+    "    tal_lista = [float(x) for x in lista_str]\n",
+    "    störst = max(tal_lista)\n",
+    "    minst = min(tal_lista)\n",
+    "    print(f\"största talet är {störst}, minsta talet är {minst}\")\n",
+    "except:\n",
+    "    print(\"Felaktiga tal\")\n",
+    "    \n",
+    "\n",
+    "print(tal_lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
