--- a/Programmerijng_IRL/Pandas/pandas_genomgång.ipynb
+++ b/Programmerijng_IRL/Pandas/pandas_genomgång.ipynb
@@ -60,10 +60,10 @@
     "#print(df.head(3))\n",
     "#print(df.tail(2)) # Slänger raderna som innehåller Nan\n",
     "#print(df.dropna())  # Slänger raderna som innehåller Nan\n",
-    "df = df.fillna(0)\n",
-    "df[\"Total\"] = df.sum(axis=1)\n",
-    "df[\"Betyg\"] = np.where(df[\"Total\"] > 7,  \"Godkänt\", \"Underkänt\")\n",
-    "df"
+    "#df = df.fillna(0)\n",
+    "#df[\"Total\"] = df.sum(axis=1)\n",
+    "#df[\"Betyg\"] = np.where(df[\"Total\"] > 7,  \"Godkänt\", \"Underkänt\")\n",
+    "#df"
    ]
   },
   {
